# photon_mapping

./: .coveragerc  .gitignore  CMakeLists.txt  Doxyfile  README.md  build_run.sh  environment.yml  pyproject.toml  setup.py
.github/workflows/: build-docs-upload.yml  python-package-conda.yml
.ipynb_checkpoints/: PlantRadScene-checkpoint.ipynb
conda/: bld.bat  build.sh  conda_build_config.yml  docs.yml  environment.yml  meta.yaml
docs/source/: code_example.rst  conf.py  guide.rst  index.rst  installing.rst  notebook_examples.rst
docs/source/examples/: PlantRadScene.ipynb  simulation.ini
docs/source/examples/.ipynb_checkpoints/: PlantRadScene-checkpoint.ipynb
docs/source/examples/plantgl-rad-scene/: PlantRadScene.ipynb  Test_tmin.ipynb  simulation.ini
docs/source/examples/results/: face_captor_res.csv  virtual_captor_res.csv
docs/source/examples/spectrum/: chambre1_spectrum
examples/cpp/: CMakeLists.txt  main.cpp
examples/python/: Chambre_0.rad  Tout.rad  env.bgeom  env.geom  env.mtl  lpyScene.py  main.py  mesh.mtl  radParse.py  testChamber.rad
examples/python/Evaluation Simulation SEC2/: .~lock.simuMesureExpes12_tout.xls#  captor_result-1000000000.csv  evaluation.py  evaluation_Nmes.py  evaluation_plant.py  readRes_pointCalibration.py  ref_FeuilleVieille_Inf.csv  time.txt  time_thread.txt  trans_FeuilleVieille_Inf.csv
examples/python/Evaluation Simulation SEC2/res_cur/: captor_result-1000000000-655-665-nm_PCG.csv  captor_result-1000000000-655-665-nm__1.csv  captor_result-1000000000-655-665-nm_corRadius.csv  captor_result-1000000000-655-665-nm_correctDiffse.csv  captor_result-1000000000-655-665-nm_correctFaceCaptor.csv  captor_result-1000000000-655-665-nm_old.csv  captor_result-1000000000-655-665-nm_onlyLamp.csv  captor_result-1000000000-655-665-nm_onlyLampAbsorb.csv  captor_result-1000000000-655-665-nm_onlyLamps.csv  captor_result-1000000000-655-665-nm_sansMakrolon.csv  captor_result-1000000000-655-665-nm_t.csv
examples/python/Evaluation Simulation SEC2/res_final/: captor_result-1000000000-655-665-nm.csv  captor_result-1000000000-655-665-nm_PCG32.csv  captor_result-1000000000-655-665-nm_correctCaptorGeo.csv  captor_result-1000000000-655-665-nm_correctTnear.csv  captor_result-1000000000-655-665-nm_plant.csv
examples/python/Evaluation Simulation SEC2/res_sec2/: mesures.txt  mesures_1.txt  mesures_absorb.txt  mesures_sansMakrolon.txt  mesures_sansTABLE.txt
examples/python/lpy-scene/: lpyScene.py  rose-simple4.lpy
examples/python/obj-scene/: main.py  mesh.mtl
examples/python/outdoor_scene/: outdoor_scene.py  readme.txt
examples/python/plantgl-rad-scene/: .obj.mtl  Chambre_Commente par Sabine avec PO materiaux.rad  PlantRadScene.ipynb  SimpleSimulation.py  captor_result-100000-600-700-nm.csv  captor_result-100000000-600-700-nm.csv  captor_result-400-500nm.csv  captor_result-435nm.csv  captor_result.csv  captors.csv  captors_expe2.csv  chambre2.mtl  chambre2.rad  chambre2.rad.bak  env.mtl  evaluation.py  planglRadScene.py  plantglRadScene.py  points_calibration.csv  radParse.py  simple.rad  simulation.ini  testChamber.mtl  testChamber.rad  writeplot.py
examples/python/plantgl-rad-scene/.ipynb_checkpoints/: PlantRadScene-checkpoint.ipynb
examples/python/plantgl-rad-scene/Evaluation Simulation SEC2/: SchemaPositionCapteurs.pptx  evaluation.py  evaluation_plant.py  simuMesureExpes12_tout.xls
examples/python/plantgl-rad-scene/PO/: Specularities.xlsx
examples/python/plantgl-rad-scene/assets/: chamberVide.mtl  chamberVide.rad  chambre2.mtl  rose-simple4.lpy  simple.rad  testChamber.mtl  testChamber.rad  testChamber_onlyLamps.mtl  testChamber_onlyLamps.rad  testChamber_sanstable.mtl  testChamber_sanstable.rad
examples/python/plantgl-rad-scene/captors/: captors_expe1 copy.csv  captors_expe1.csv
examples/python/plantgl-rad-scene/modules/: Simulator.py  __init__.py
examples/python/plantgl-rad-scene/results/: captor_result-100000-400-500-nm.csv  captor_result-1000000.csv  captor_result-10000000-600-655-nm.csv  captor_result-10000000-655-665-nm.csv  captor_result-10000000.csv  captor_result-100000000-600-655-nm.csv  captor_result-100000000-655-665-nm.csv  captor_result-100000000.csv  captor_result-1000000000-600-655-nm.csv  captor_result-1000000000-655-665-nm.csv  captor_result-1000000000.csv  captor_result-10000000000-600-655-nm.csv  captor_result-10000000000-655-665-nm.csv  face_captor_res.csv  face_captor_res.csv.csv  photonmap-660.0nm.ppm  photonmap-captors-660.0nm.ppm  plant_result-10000000.csv  plant_result-1000000000.csv  virtual_captor_res.csv  virtual_captor_res.csv.csv
examples/python/sponza/: sponza.ipynb  sponza.py
models/: cornell_box.mtl  mesh.mtl  schoute.mtl  test.mtl
photonmap/: Simulator.py  __init__.py
photonmap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
photonmap/Common/: Math.py  Outils.py  __init__.py
photonmap/Energy/: CalculateEnergy.py  CorrectEnergy.py  __init__.py
photonmap/Loader/: LoadCaptor.py  LoadEnvironment.py  LoadPlant.py  __init__.py
photonmap/Reader/: ReadPO.py  ReadRADGeo.py  __init__.py
results/: virtual_captor_res.csv  virtual_captor_res.csv.csv
src/cpp/include/: CMakeLists.txt  camera.h  camera.hpp  core.h  core.hpp  image.cpp  image.h  image.hpp  integrator.h  integrator.hpp  light.h  light.hpp  material.h  material.hpp  photon_map.cpp  photon_map.h  photon_map.hpp  primitive.cpp  primitive.h  primitive.hpp  sampler.h  sampler.hpp  scene.h  scene.hpp  triangle.cpp  triangle.h  triangle.hpp
src/cpp/test/: CMakeLists.txt  test_camera.cpp  test_image.cpp  test_intersector.cpp  test_path_tracing.cpp  visualize_photon_map.cpp
src/openalea/photonmap/: Simulator.py  __init__.py  simulator.py
src/openalea/spice/: __init__.py  configuration.py  simulator.py
src/python/: CMakeLists.txt  ext_photonmapping.cpp
tests/: cornellbox-water2.mtl  testChamberPH.mtl  test_camera.py  test_intersector.py  test_math.py  test_photonmap.py  test_properties.py  test_random.py  test_read_rad_geo.py  test_reflection.py  test_render.py  test_scene.py  test_simple_simulation.py  test_tools.py  test_vec.py
(+101 files in other folders)
