[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "openalea.photon_mapping"
authors = [
    {name = "Aurélien Besnier"},
    {name = "Tuan-Minh Nguyen"}
]
description="Photon mapping with python wrapper"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/openalea-incubator/photon_mapping"
"Bug Tracker" = "https://github.com/openalea-incubator/photon_mapping/issues"
Discussions = "https://github.com/openalea-incubator/photon_mapping/discussions"
Changelog = "https://github.com/openalea-incubator/photon_mapping/releases"

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]

[tool.ruff]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "PGH", # pygrep-hooks
    "RUF", # Ruff-specific
    "UP",  # pyupgrade
]
extend-ignore = [
    "E501",   # Line too long
]
target-version = "py312"
