[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "openalea.photonmap"
authors = [
    {name = "Aurélien Besnier"},
    {name = "Tuan-Minh Nguyen"}
]
description="Photon mapping with python wrapper"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["simulation", "light", "photon", "ray tracing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
license = {file = "LICENSE"}
version="0.1.0"

[project.urls]
Homepage = "https://github.com/openalea-incubator/photon_mapping"
"Bug Tracker" = "https://github.com/openalea-incubator/photon_mapping/issues"
Discussions = "https://github.com/openalea-incubator/photon_mapping/discussions"
Changelog = "https://github.com/openalea-incubator/photon_mapping/releases"

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]

[tool.scikit-build]
build-dir="./build"

[tool.scikit-build.sdist]
include = ["libphotonmap_core.so"]

[tool.scikit-build.cmake]
build-type="Release"
source-dir="."

[tool.scikit-build.wheel]
packages = ["src/openalea"]